# CodeCurious

./: .gitignore  .gitmodules  README.md  WBAL_REFACTOR_PLAN.md  day0.py  main.py  pyproject.toml  server.py
__marimo__/session/: day0.py.json
_tmp_/: Yet_5.txt  and_1.txt  inexpressible_10.txt  much_4.txt  were_11.txt
wbal/: GRIFFIN_AGENT_INSTRUCTIONS.md  STATE.md  pyproject.toml
wbal/examples/: simple_example.py  story_summarizer.py
wbal/examples/regioned_claude_code/: agent.py
wbal/examples/story_summarizer_files/: Blessed_13.txt  He_2.txt  as_3.txt  face_8.txt  flight_9.txt  has_6.txt  immediately_0.txt  on_14.txt  the_7.txt  trust_12.txt
wbal/tests/: test_agent.py  test_environment.py  test_helper.py  test_lm.py  test_mixins.py  test_story_summarizer.py
wbal/wbal/: __init__.py  agent.py  environment.py  helper.py  lm.py  mixins.py  object.py  sandboxer.py
wbal/wbal.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
wbal/wbal/_tmp_/: __init__.py  agent.py  env.py  helpers.py  lm.py  main.py  object.py  sandbox.py  tool.py
